--- a/index.html
+++ b/index.html
@@ -5,9 +5,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>MENU</title>
-    <link rel="shortcut icon" href="/mn/assets/img/rose.png">
+    <link rel="shortcut icon" href="/assets/img/rose.png">
     <link rel="stylesheet" href="https://use.typekit.net/eqx3jwb.css">
-    <link rel="stylesheet" type="text/css" href="/mn/assets/style.css">
+    <link rel="stylesheet" type="text/css" href="/assets/style.css">
     <script>
         document.documentElement.className = "js";
 
@@ -62,7 +62,7 @@
                 <button onclick="playMusic()">OK</button>
             </div>
         </div>
-        <audio id="audio" src="/mn/assets/music/music.mp3" preload="auto" muted loop></audio>
+        <audio id="audio" src="/assets/music/music.mp3" preload="auto" muted loop></audio>
 
         <script>
             function playMusic() {
@@ -123,34 +123,34 @@
         <div class="content">
             <div class="grid">
                 <div class="grid__item pos-2">
-                    <div class="grid__item-img" style="background-image:url('/mn/assets/img/img2.jpg');" class="hover"></div>
+                    <div class="grid__item-img" style="background-image:url('/assets/img/img2.jpg');" class="hover"></div>
                 </div>
                 <div class="grid__item pos-3">
-                    <div class="grid__item-img" style="background-image:url('/mn/assets/img/img3.jpg');" class="hover"></div>
+                    <div class="grid__item-img" style="background-image:url('/assets/img/img3.jpg');" class="hover"></div>
                 </div>
                 <div class="grid__item pos-4">
-                    <div class="grid__item-img" style="background-image:url('/mn/assets/img/img4.jpg');" class="hover"></div>
+                    <div class="grid__item-img" style="background-image:url('/assets/img/img4.jpg');" class="hover"></div>
                 </div>
                 <div class="grid__item pos-1">
-                    <div class="grid__item-img" style="background-image:url('/mn/assets/img/img1.png');" class="hover"></div>
+                    <div class="grid__item-img" style="background-image:url('/assets/img/img1.png');" class="hover"></div>
                 </div>
                 <div class="grid__item pos-5">
-                    <div class="grid__item-img" style="background-image:url('/mn/assets/img/img5.jpg');" class="hover"></div>
+                    <div class="grid__item-img" style="background-image:url('/assets/img/img5.jpg');" class="hover"></div>
                 </div>
                 <div class="grid__item pos-6">
-                    <div class="grid__item-img" style="background-image:url('/mn/assets/img/img6.jpg');" class="hover"></div>
+                    <div class="grid__item-img" style="background-image:url('/assets/img/img6.jpg');" class="hover"></div>
                 </div>
                 <div class="grid__item pos-7">
-                    <div class="grid__item-img" style="background-image:url('/mn/assets/img/img7.png');" class="hover"></div>
+                    <div class="grid__item-img" style="background-image:url('/assets/img/img7.png');" class="hover"></div>
                 </div>
                 <div class="grid__item pos-8">
-                    <div class="grid__item-img" style="background-image:url('/mn/assets/img/img8.png');" class="hover"></div>
+                    <div class="grid__item-img" style="background-image:url('/assets/img/img8.png');" class="hover"></div>
                 </div>
                 <div class="grid__item pos-9">
-                    <div class="grid__item-img" style="background-image:url('/mn/assets/img/img9.jpg');" class="hover"></div>
+                    <div class="grid__item-img" style="background-image:url('/assets/img/img9.jpg');" class="hover"></div>
                 </div>
                 <div class="grid__item pos-10">
-                    <div class="grid__item-img" style="background-image:url('/mn/assets/img/img10.png');" class="hover"></div>
+                    <div class="grid__item-img" style="background-image:url('/assets/img/img10.png');" class="hover"></div>
                 </div>
             </div>
             <div class="container">
@@ -237,9 +237,9 @@
                     if (selected == "none") {
                         alert("Chương trình sẽ sớm được ra mắt");
                     } else if (selected == 'valentine-14-2-2025') {
-                        window.location.href = "https://dts-ops.github.io/mn/valentine%20(14-2-2025)/";
+                        window.location.href = "about:blank";
                     } else if (selected == 'archive') {
-                        window.location.href = "https://dts-ops.github.io/mn/archive/";
+                        window.location.href = "about:blank";
                     }
                 }
 
@@ -255,7 +255,7 @@
     <svg class="cursor" width="80" height="80" viewBox="0 0 80 80">
         <circle class="cursor__inner" cx="40" cy="40" r="20"></circle>
     </svg>
-    <script src="/mn/assets/script.js" defer></script>
+    <script src="/assets/script.js" defer></script>
 </body>
 
 </html>
