--- a/index.html
+++ b/index.html
@@ -237,9 +237,9 @@
                     if (selected == "none") {
                         alert("Chương trình sẽ sớm được ra mắt");
                     } else if (selected == 'valentine-14-2-2025') {
-                        window.location.href = "about:blank";
+                        window.location.href = "https://dts-mn.vercel.app/valentine%20(14-2-2025)/";
                     } else if (selected == 'archive') {
-                        window.location.href = "about:blank";
+                        window.location.href = "https://dts-mn.vercel.app/archive/";
                     }
                 }
 
