--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
             left: 0;
             width: 100%;
             height: 100%;
-            background: rgba(0, 0, 0, 0.5);
+            background: rgba(255, 192, 203, 0.9);
             display: flex;
             justify-content: center;
             align-items: center;
@@ -23,7 +23,8 @@
         }
 
         .dialog {
-            background: white;
+            background-color: rgb(255, 178, 152);
+            font-size: 20pt;
             padding: 20px;
             border-radius: 10px;
             box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
@@ -36,6 +37,8 @@
             color: pink;
             font-size: 24px;
             margin-top: 5px;
+            position: absolute;
+            z-index: 10;
         }
     </style>
 </head>
@@ -45,7 +48,6 @@
         <div class="overlay" id="overlay">
             <div class="dialog">
                 <h2>🎉 WELCOME 🎉</h2>
-                <p>Chào mừng bạn đến với website của tôi</p>
                 <button onclick="playMusic()">OK</button>
             </div>
         </div>
