--- a/index.html
+++ b/index.html
@@ -33,6 +33,9 @@
 
         #stopwatch {
             font-family: monospace;
+            display: flex;
+            justify-content: center;
+            width: 100vw;
             text-align: center;
             color: pink;
             font-size: 24px;
