--- a/index.html
+++ b/index.html
@@ -82,7 +82,8 @@
                     hours.toString().padStart(2, '0') + " giờ",
                     minutes.toString().padStart(2, '0') + " phút",
                     seconds.toString().padStart(2, '0') + " giây",
-                    milliseconds + " ms"
+                    milliseconds + " ms",
+                    " rồi"
                 ].join(" ");
 
                 document.getElementById("stopwatch").innerText = formattedTime;
