--- a/boardcast/index.html
+++ b/boardcast/index.html
@@ -3,10 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Broadcast Board</title>
+    <title>Memory</title>
     <style>
         body {
-            font-family: Arial, sans-serif;
+            font-family: Consolas, sans-serif;
             padding: 20px;
             background-color: #f4f4f4;
         }
@@ -27,8 +27,8 @@
     </style>
 </head>
 <body>
-    <h2>Broadcast Board</h2>
-    <div id="broadcastList">Đang tải dữ liệu...</div>
+    <h2>MEMORY</h2>
+    <div id="broadcastList">Loading...</div>
     
     <script>
         fetch('data.json')
