--- a/boardcast/index.html
+++ b/boardcast/index.html
@@ -27,7 +27,7 @@
     </style>
 </head>
 <body>
-    <h2>MEMORY</h2>
+    <h2>EVENT</h2>
     <div id="broadcastList">Loading...</div>
     
     <script>
