--- a/boardcast/index.html
+++ b/boardcast/index.html
@@ -6,7 +6,7 @@
     <title>Memory</title>
     <style>
         body {
-            font-family: Consolas, sans-serif;
+            font-family: Arial, sans-serif;
             padding: 20px;
             background-color: #f4f4f4;
         }
@@ -20,9 +20,11 @@
         .time {
             font-weight: bold;
             color: #333;
+            font-size: 1.2em;
         }
         .content {
             margin-top: 5px;
+            padding-left: 20px;
         }
     </style>
 </head>
