--- a/boardcast/index.html
+++ b/boardcast/index.html
@@ -6,7 +6,7 @@
     <title>Memory</title>
     <style>
         body {
-            font-family: Arial, sans-serif;
+            font-family: Consolas, sans-serif;
             padding: 20px;
             background-color: #f4f4f4;
         }
