--- a/index.html
+++ b/index.html
@@ -180,7 +180,7 @@
                 <select id="choose_box">
                     <option value="archive">Archive</option>
                     <option value="valentine-14-2-2025">Valentine (14/2/2025)</option>
-                    <option value="boardcast">Event</option>
+                    <option value="event">Event</option>
                     <option value="none">Chưa ra mắt</option>
                 </select>
                 <div class="sparkle-button">
