--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>MENU</title>
-    <link rel="shortcut icon" href="/assets/img/rose.png">
+    <link rel="shortcut icon" href="/assets/img/icon.png">
     <link rel="stylesheet" href="https://use.typekit.net/eqx3jwb.css">
     <link rel="stylesheet" type="text/css" href="/assets/style.css">
     <style>
