--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>MENU</title>
+    <title>TTMN :33</title>
     <link rel="shortcut icon" href="/assets/img/icon.png">
     <link rel="stylesheet" href="https://use.typekit.net/eqx3jwb.css">
     <link rel="stylesheet" type="text/css" href="/assets/style.css">
