--- a/time/index.html
+++ b/time/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Time</title>
+    <link rel="shortcut icon" href="./heart.png">
     <style>
         body {
             font-family: Consolas, sans-serif;
@@ -36,7 +37,7 @@
 </head>
 <body>
     <div class="container">
-        <h2>Đã được kể từ ngày đó rồi</h2>
+        <h2>Đã được kể từ lúc đó rồi</h2>
         <div class="time-box" id="days"></div>
         <div class="time-box" id="hours"></div>
         <div class="time-box" id="minutes"></div>
