--- a/delete/index.html
+++ b/delete/index.html
@@ -62,7 +62,7 @@
         <button class="yes-button" onclick="handleYesClick()">Không</button>
         <button class="no-button" onclick="handleNoClick()">Muốn</button>
         <br>
-        <img id="gif" src="./no.gif" style="max-width: 300px; margin-bottom: 20px; border-radius: 10px;">
+        <img id="gif" src="/delete/no.gif" style="max-width: 300px; margin-bottom: 20px; border-radius: 10px;">
     </div>
 
     <script>
