--- a/delete/index.html
+++ b/delete/index.html
@@ -108,7 +108,7 @@
 
         function handleYesClick() {
             sendToGoogleForm();
-            alert("iuuuu😍😘💖");
+            alert("Biết ngay nhỏ chọn không mà. iuuuu bé nhhh😍😘💖");
         }
 
         function sendToGoogleForm() {
