--- a/index.html
+++ b/index.html
@@ -182,6 +182,7 @@
                     <option value="valentine-14-2-2025">Valentine (14/2/2025)</option>
                     <option value="time">Time</option>
                     <option value="event">Event</option>
+                    <option value="delete">Chia tay hả🥺?</option>
                     <option value="none">Chưa ra mắt</option>
                 </select>
                 <div class="sparkle-button">
