--- a/time/index.html
+++ b/time/index.html
@@ -44,26 +44,33 @@
         <div class="time-box" id="seconds"></div>
     </div>
 
-    <script>
-        const startTime = new Date("March 30, 2025 16:43:00").getTime();
+<script>
+    const startTime = new Date("March 30, 2025 16:43:00").getTime();
 
-        function updateTimer() {
-            const now = new Date().getTime();
-            const elapsed = now - startTime;
+    function updateTimer() {
+        const now = new Date().getTime();
+        let elapsed = now - startTime;
 
-            const days = Math.floor(elapsed / (1000 * 60 * 60 * 24));
-            const hours = Math.floor(elapsed / (1000 * 60 * 60));
-            const minutes = Math.floor(elapsed / (1000 * 60));
-            const seconds = Math.floor(elapsed / 1000);
+        const days = Math.floor(elapsed / (1000 * 60 * 60 * 24));
+        elapsed %= (1000 * 60 * 60 * 24);
 
-            document.getElementById("days").innerText = `Ngày: ${days}`;
-            document.getElementById("hours").innerText = `Giờ: ${hours}`;
-            document.getElementById("minutes").innerText = `Phút: ${minutes}`;
-            document.getElementById("seconds").innerText = `Giây: ${seconds}`;
-        }
+        const hours = Math.floor(elapsed / (1000 * 60 * 60));
+        elapsed %= (1000 * 60 * 60);
 
-        setInterval(updateTimer, 1000);
-        updateTimer();
-    </script>
+        const minutes = Math.floor(elapsed / (1000 * 60));
+        elapsed %= (1000 * 60);
+
+        const seconds = Math.floor(elapsed / 1000);
+
+        document.getElementById("days").innerText = `Ngày: ${days}`;
+        document.getElementById("hours").innerText = `Giờ: ${hours}`;
+        document.getElementById("minutes").innerText = `Phút: ${minutes}`;
+        document.getElementById("seconds").innerText = `Giây: ${seconds}`;
+    }
+
+    setInterval(updateTimer, 1000);
+    updateTimer();
+</script>
+
 </body>
 </html>
