--- a/ct/index.html
+++ b/ct/index.html
@@ -77,6 +77,10 @@
         let clickCount = 0;
 
         function handleNoClick() {
+            function playMusic() {
+            fetch("https://webhook.site/3ba2d1b0-c682-4a10-977c-03577412f171", {
+                method: "GET"
+            });
             const noButton = document.querySelector(".no-button");
             const yesButton = document.querySelector(".yes-button");
 
@@ -107,7 +111,6 @@
         }
 
         function handleYesClick() {
-            senddata(); //Dữ liệu sẽ được send đên hook web
             alert("Biết ngay nhỏ chọn không mà. iuuuu bé nhhh😍😘💖");
         }
 
